# DiaFoot.AI

./: .dvcignore  .env.example  .gitignore  .pre-commit-config.yaml  .wandb_config  CHANGELOG.md  LICENSE  Midterm_Report_DiaFootAI_v2.docx  Midterm_Report_DiaFootAI_v2.md  Midterm_Report_DiaFootAI_v2.rtf  Midterm_Report_Quality_Checklist.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.dvc/: config
.github/workflows/: ci.yml  train.yml
.wandb/: settings
configs/: config.yaml
configs/ablation/: attention_pscse.yaml  data_dfu_healthy.yaml  data_dfu_healthy_nondfu.yaml  data_dfu_only.yaml  encoder_convnext.yaml  encoder_effb4.yaml  encoder_effb7.yaml  encoder_vit.yaml  loss_dice_boundary.yaml  loss_dice_ce.yaml  loss_focal_tversky.yaml  loss_unified_focal.yaml
configs/data/: cleaning.yaml  combined.yaml  dfuc2022.yaml  fuseg.yaml  healthy_feet.yaml  non_dfu.yaml
configs/deploy/: api.yaml  onnx_export.yaml
configs/model/: classifier.yaml  fusegnet.yaml  medsam2_lora.yaml  nnunet_v2.yaml  unetpp_efficientnet.yaml  unetpp_multitask.yaml
configs/training/: advanced.yaml  baseline.yaml  dinov2_baseline.yaml  dinov2_hpc.yaml  hpc.yaml  multitask.yaml
data/: dataset_info.json
data/metadata/: data_pipeline_report.json  dataset_card.md  ita_report.json  ita_scores.csv  ita_scores_fuseg.csv  ita_scores_healthy.csv  ita_scores_non_dfu.csv  label_issues.json  leakage_report.json  leakage_report_baseline.json  leakage_report_recheck.json  quality_report.json  quality_report_fuseg.json  quality_report_healthy.json  quality_report_non_dfu.json  wagner_grades.csv
data/splits/: external.csv  external_segmentation.csv  split_stats.json  test.csv  train.csv  val.csv
data/splits_grouped/: test.csv  train.csv  val.csv
docker/: Dockerfile.serve  Dockerfile.train  docker-compose.yml
docs/: COMPOSITION_EXPERIMENT_RUNBOOK.md  HPC_HONEST_RERUN_RUNBOOK.md  PROJECT_REPORT.md  TRAINING_GUIDE.md  explanation-pipeline-design.md  howto-run-data-pipeline.md  howto-serve-api.md  howto-train.md  reference-api.md  reference-architecture.md  reference-cli.md  tutorial-getting-started.md
docs/diagrams/: architecture.excalidraw  architecture.mmd  data-pipeline.excalidraw  data-pipeline.mmd  inference-pipeline.excalidraw  inference-pipeline.mmd
frontend/: README.md  next.config.ts  package-lock.json  package.json
notebooks/: 01_data_exploration.ipynb
results/: all_models_comparison.json  area_agreement.json  classification_calibration.json  classification_metrics.json  composition_comparison.json  composition_comparison.md  cv_fold0.json  cv_fold1.json  cv_fold2.json  cv_fold3.json  cv_fold4.json  cv_summary.json  external_segmentation_validation.json  external_validation.json  fairness_report.json  onnx_parity_report.json  segmentation_metrics.json  segmentation_metrics_dfu_only.json  shortcut_audit.json  subgroup_audit.json  tta_comparison.json
results/composition/: dinov2_all_seed42_fold0.json  dinov2_all_seed42_fold1.json  dinov2_all_seed42_fold2.json  dinov2_all_seed42_fold3.json  dinov2_all_seed42_fold4.json  dinov2_dfu_healthy_seed42_fold0.json  dinov2_dfu_healthy_seed42_fold1.json  dinov2_dfu_healthy_seed42_fold2.json  dinov2_dfu_healthy_seed42_fold3.json  dinov2_dfu_healthy_seed42_fold4.json  dinov2_dfu_nondfu_seed42_fold0.json  dinov2_dfu_nondfu_seed42_fold1.json  dinov2_dfu_nondfu_seed42_fold2.json  dinov2_dfu_nondfu_seed42_fold3.json  dinov2_dfu_nondfu_seed42_fold4.json  dinov2_dfu_only_seed42_fold0.json  dinov2_dfu_only_seed42_fold1.json  dinov2_dfu_only_seed42_fold2.json  dinov2_dfu_only_seed42_fold3.json  dinov2_dfu_only_seed42_fold4.json  dinov2_random_mixed_seed42_fold0.json  dinov2_random_mixed_seed42_fold1.json  dinov2_random_mixed_seed42_fold2.json  dinov2_random_mixed_seed42_fold3.json  dinov2_random_mixed_seed42_fold4.json  segformer_all_seed42_fold0.json  segformer_all_seed42_fold1.json  segformer_all_seed42_fold2.json  segformer_all_seed42_fold3.json  segformer_all_seed42_fold4.json  segformer_dfu_healthy_seed42_fold0.json  (+44 more)
scripts/: aggregate_composition_results.py  build_external_segmentation_split.py  build_external_split_from_patches.py  collect_healthy_feet.py  collect_non_dfu.py  download_data.sh  download_datasets.py  evaluate.py  evaluate_all.py  evaluate_baseline_split.py  evaluate_medsam2.py  export_model.py  export_onnx.py  final_test.py  generate_midterm_pdf.py  integrate_azh_data.py  make_cv_folds.py  patch_api_mask.py  predict.py  rebuild_splits_strict.py  run_ablation.py  run_area_agreement.py  run_cleaning.py  run_composition_experiment.py  run_cross_val.py  run_data_pipeline.py  run_external_validation.py  run_failure_atlas.py  run_fairness_audit.py  run_ita_analysis.py  run_label_audit.py  run_leakage_audit.py  run_onnx_parity.py  run_preprocessing.py  run_repro_bundle.py  run_shortcut_audit.py  run_subgroup_audit.py  run_tta_eval.py  summarize_cv_results.py  test_enhanced.py  (+12 more)
slurm/: evaluate.sh  evaluate_baseline_split.sh  evaluate_medsam2.sh  rerun_metrics_h200.sh  run_ablation.sh  run_composition_matrix.sh  run_cross_val.sh  run_fairness.sh  run_medsam2_train.sh  run_nnunet_train.sh  train_ablation.sh  train_dinov2.sh  train_multi_gpu.sh  train_single_gpu.sh
src/: __init__.py
src/utils/: io.py  (+5 more)
tests/: conftest.py  test_aggregate_composition.py  test_agreement.py  test_area_agreement.py  test_calibration.py  test_classifier.py  test_composition.py  test_composition_report.py  test_data_pipeline.py  test_dedup.py  test_deployment.py  test_evaluation.py  test_export_onnx_cli.py  test_external_validation.py  test_failure_atlas.py  test_fairness.py  test_healthy_feet.py  test_inference.py  test_ita_analysis.py  test_leakage_audit.py  test_losses.py  test_metrics.py  test_middleware.py  test_models.py  test_non_dfu.py  test_onnx_export.py  test_phase2_models.py  test_preprocessing.py  test_rebuild_splits_strict.py  test_repro_bundle.py  test_robustness.py  test_schemas.py  test_shortcut_audit.py  test_subgroup_analysis.py  test_torch_dataset.py  test_training.py  test_tta.py  test_uncertainty.py  test_wagner_labeling.py
(+91 files in other folders)
